crates/nits-review-core/tests/snapshots/render__mixed_terminators__exact.snap
---
source: crates/nits-review-core/tests/render.rs
expression: r
---
{
  "content": {
    "type": "Text",
    "total_rows": 4,
    "chunk_rows": 500,
    "chunk_count": 1,
    "highlighted": false,
    "additions": 3,
    "deletions": 3,
    "gaps": []
  },
  "rows": [
    {
      "type": "HunkHeader",
      "text": "@@ -1,3 +1,3 @@"
    },
    {
      "type": "Modified",
      "left": {
        "line_no": 1,
        "text": "one",
        "ending": "Lf",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 1,
        "text": "one",
        "ending": "CrLf",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Modified",
      "left": {
        "line_no": 2,
        "text": "two",
        "ending": "Lf",
        "spans": [],
        "changed": [
          {
            "start": 0,
            "end": 3
          }
        ]
      },
      "right": {
        "line_no": 2,
        "text": "changed",
        "ending": "Lf",
        "spans": [],
        "changed": [
          {
            "start": 0,
            "end": 7
          }
        ]
      }
    },
    {
      "type": "Modified",
      "left": {
        "line_no": 3,
        "text": "three",
        "ending": "Lf",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 3,
        "text": "three",
        "ending": "Missing",
        "spans": [],
        "changed": []
      }
    }
  ]
}
